css/styles.css
/* ... */
/** Styles for footer image links **/

.flex4 {
    width: 3rem;
    height: 3rem;
    margin: 0 auto;
    overflow-x: hidden;
    overflow-y: hidden;

    a img {
        display: block;
        width: 100%;
        height: auto;
        object-fit: cover;
        object-position: center;
    }
}

/** Color Scheme and Dark Mode **/

@media screen and (prefers-color-scheme: dark) {
    body,
    main,
    header,
    footer,
    #wrapper {
        background-color: #222;
    }

    p,
    h1,
    h2,
    h3,
    h4,
    li,
    a {
        color: #fff;
    }

    a img {
        -webkit-filter: invert(100%);
        filter: invert(100%);
    }

    header #menu-toggle {
        border: none;
        background-color: transparent;

        &:focus,
        &:active,
        &:hover {
            img {
                filter: invert(40%);
            }
        }

        img {
            filter: invert(80%);
            width: 24px;
            height: 24px;
        }
    }

    header #primary ul li a {
        display: block;
        text-decoration: none;
        color: #fff;
    }

    header #primary ul li a:hover {
        color: #bbb;
    }

    .home #primary li:nth-child(1) a,
    .about #primary li:nth-child(2) a,
    .contact #primary li:nth-child(3) a,
    .schedule #primary li:nth-child(4) a {
        color: #bbb;
    }

    fieldset label {
        float: left;
        clear: both;
        color: #fff;
    }

    footer #secondary ul li {
        color: #fff;
        font-size: 1.25em;
        float: left;
        line-height: 1.5em;
        list-style-type: none;
        width: 25%;
        background: #222;
        margin-bottom: 20px;
    }

    footer #secondary ul li a {
        text-decoration: none;
        color: #fff;
    }
}

/** Dynamic Sizing for Responsive Web Design **/

@media screen and (max-width: 977px) {
    .home main img {
        width: 40%;
        padding: 0 40px 0 0;
        padding: 0;
        margin: 16px 20px 50px;
    }

    textarea {
        height: 20.25em;
    }

    body {
        margin: 0 auto;
    }
}

@media screen and (max-width: 950px) {
    .home main img {
        width: 45%;
        padding: 0;
        margin: 20px 40px;
    }

    .home aside {
        margin: 0 auto;
    }

    textarea {
        height: 15em;
    }

    header #primary ul li {
        font-family: open_sanslight, sans-serif;
    }

    #headline {
        width: 60%;
        padding-bottom: 93px;
    }

    .about .right {
        float: right;
        width: 40%;
        padding: 0 20px;
    }

    .about .left {
        float: left;
        width: 40%;
        padding: 0 20px;
    }

    .about h3 {
        clear: none;
    }

    .about .text {
        float: right;
    }

    main .about {
        margin: 0;
    }

    main p {
        margin: 20px;
    }

    input {
        float: left;
        width: 100%;
        margin-bottom: 10px;
        display: block;
    }
}

@media screen and (max-width: 900px) {
    #headline {
        width: 60%;
        padding: 0;
    }
}

@media screen and (max-width: 737px) {
    #headline {
        width: 100%;
    }

    #headline-img {
        width: 0;
    }

    .row .col3 {
        width: 100%;
        float: none;
    }
}

@media screen and (max-width: 650px) {
    .home main img {
        width: 92%;
        padding: 0;
        margin: 0 20px 0;
        float: none;
        clear: both;
    }

    aside {
        width: 0;
        display: none;
    }

    .home aside {
        /*width: 100%;*/
        display: block;
    }

    #headline-img {
        width: 92%;
        padding: 0;
        margin: 20px;
        float: none;
        clear: both;
    }

    .about .right {
        width: 92%;
        padding: 0;
        margin: 20px;
        float: none;
        clear: both;
    }

    .about .left {
        width: 92%;
        padding: 0;
        margin: 20px;
        float: none;
        clear: both;
    }

    .about h3 {
        clear: none;
    }

    .about .left-text {
        float: none;
        width: 100%;
    }

    .about .right-text {
        float: none;
        width: 100%;
    }

    main .about,
    .contact main {
        width: 100%;
    }

    #headline {
        max-width: 650px;
        width: 100%;
        float: none;
        padding-bottom: 0;
    }

    .text {
        float: none;
        width: 100%;
    }

    footer #secondary ul li {
        margin-bottom: 4em;
    }
}

@media screen and (max-width: 450px) {
    header .flex-menu {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 0 3rem 0 1.5rem;

        h1 {
            margin: 0;
        }
    }

    header #menu-toggle {
        display: inline-block;
        border: none;
        background-color: transparent;

        &:focus,
        &:active,
        &:hover {
            filter: invert(40%);
        }

        img {
            width: 24px;
            height: 24px;
        }
    }

    img {
        margin: 0;
        padding: 0;
        width: 100%;
        border-radius: 0;
    }

    .home main img {
        width: 100%;
        padding: 0;
        margin: 0;
    }

    .home main p {
        margin: 0;
        padding: 0;
        margin-top: 1rem;
    }

    #headline-img {
        width: 100%;
        padding: 0;
        margin: 0;
    }

    .about .right {
        width: 100%;
        padding: 0;
        margin: 0;
    }

    .about .left {
        width: 100%;
        padding: 0;
        margin: 0;
    }

    header #primary ul li {
        width: 100%;
    }

    footer #secondary ul li {
        font-size: 1.25em;
        line-height: 1.5em;
        margin-bottom: 1.5em;
        width: 50%;
    }

    footer #secondary ul {
        width: 100%;
    }

    footer #secondary ul {
        display: flex;
        flex-wrap: wrap;
    }
}
/* ... */

